# tengdb

./: .cproject  .project  CMakeLists.txt  README.md
codegen/: general-ir.cc  nextPatched.cc  printf-test.bc  printf-test.cc  printf-test.cpp  specific-ir.cc  test.cc  test.cpp  test.ll  util-ir.h
include/: ColumnInfo.h  Expression.h  HashTable.h  LineitemUtil.h  MemSpace.h  MemoryPool.h  Node.h  ORCColumnInfo.h  ORCReader.h  OrcFile.hh  ProcessRow-ir.h  RLE2.h  RLE2.hh  Reader.h  Reader.hh  SQLParser.h  SQLParserResult.h  Scanner.h  Table.h  batch.h  config.h  config.hh  functions-ir.h  llvm-codegen.h  object-pool.h  orc_proto.pb.h  orc_proto.pb.h.old  sqlhelper.h  util.h  util.hh  vectorization-ir.h
sql/: all.sql  date.sql  double.sql  int.sql  q1.sql  q2.sql  rle.sql  string.sql  varchar.sql
src/: CMakeLists.txt  ColumnInfo.h  ColumnReader-ir.cpp  ColumnReader.bc  ColumnReader.cpp  Decimal-ir.cpp  LLVMCodeGen.cpp  MemoryPool.cpp  OrcFile.cc  OrcFile.cpp  ProcessRow-ir.cpp  Query1.cpp  RLE2-ir.cpp  RLE2.cpp  Reader.cpp  codegen_function.hh  config.cpp  functions-ir.h  functions.h  llvm-codegen-test.cc  llvm-codegen-test.cpp  llvm-codegen.cc  llvm-codegen.cpp  llvm-codegen.h  myorc.cpp  orc_proto.pb.cc  process-ir.cpp1  processColumn.cpp  processColumn.hh  specific-ir.cpp  specific-ir2.cpp  testir.cc  testir.cpp  testir.ll  uti-ir.cpp  util-ir.cpp
src/codegen/: CMakeLists.txt  delta.cc  general-ir.cc  general-ir.ll  llvm-codegen.cpp  repeat-ir.cc  repeat-ir.ll  specific-ir2.cc  util-ir.cc  util-ir.ll  vectorization-ir.cpp
src/codegen8/: CMakeLists.txt  llvm-codegen.cpp  llvm-codegen.h  printf-test.cpp
src/codegen9/: llvm-codegen.cpp  llvm-codegen.h
src/common/: CMakeLists.txt  MemoryPool.cpp  Reader.cpp  coding.cc  config.cpp  orc_proto.pb.cc  orc_proto.pb.cc.old
src/exec/: Aggregate.cpp  CMakeLists.txt  HashTable.cpp  ORCScanner.cpp  ScanNode.cpp
src/frontend/: CMakeLists.txt  SQLCodegen.cpp  SQLParser.cpp  SQLParserResult.cpp  sqlhelper.cpp
src/frontend/parser/: CMakeLists.txt  bison_parser.cpp  bison_parser.h  bison_parser.y  flex_lexer.cpp
src/frontend/sql/: CMakeLists.txt  CreateStatement.h  DeleteStatement.h  DropStatement.h  ExecuteStatement.h  Expr.cpp  Expr.h  ImportStatement.h  InsertStatement.h  PrepareStatement.h  SQLStatement.h  SelectStatement.h  Table.h  UpdateStatement.h  destruct.cpp  statements.h
src/llvm-vec/: CMakeLists.txt  TestVec.cc  Testllvm.cpp  presum.cpp  presum2.cpp  shuffle256.cc  shuffle256.cpp  shuffle256.ll  unzigzag16.cc  unzigzag32.cc  unzigzag32.cpp  unzigzag32.ll
src/orc/: CMakeLists.txt  RLE2.cpp
src/orc-ir/: CMakeLists.txt  genfunc-ir.cpp  util-ir.cpp  vectorization-ir.cpp
src/orcreader/: CMakeLists.txt  ORCReader.cpp  orc_proto.pb.cc  orc_proto.pb.h
src/test/: CMakeLists.txt  ProcessRow-ir.cpp  Query1.cpp  TestRLE-ir.cpp  TestRLE.cpp  TestScanNode.cpp  TestSql.cpp  Testllvm.cpp  llvm-codegen-test.cpp
